# feifeiBox

./: Jenkinsfile  README.md  Test_IPP.sh  install-env.sh  test.sh
applications.industrial.machine-vision.computer-vision-optimization-toolkit-pv_rc1/Optimization-Methodologies/Optimized-Libraries/IppDFT/: ipp_dft.vcxproj  ipp_dft.vcxproj.filters
applications.industrial.machine-vision.computer-vision-optimization-toolkit-pv_rc1/Optimization-Methodologies/Optimized-Libraries/IppDFT/src/: ipp_dft.cpp
applications.industrial.machine-vision.computer-vision-optimization-toolkit-pv_rc1/Optimization-Methodologies/Optimized-Libraries/IppGetStarted/: IppGetStarted.sln  IppGetStarted.vcxproj
applications.industrial.machine-vision.computer-vision-optimization-toolkit-pv_rc1/Optimization-Methodologies/Optimized-Libraries/IppMem/: README.md  memcpy.sln
applications.industrial.machine-vision.computer-vision-optimization-toolkit-pv_rc1/Optimization-Methodologies/Optimized-Libraries/IppMultithreading/src/: CMakeLists.txt  ipp_multithreading.cpp
applications.industrial.machine-vision.computer-vision-optimization-toolkit-pv_rc1/Optimization-Methodologies/Optimized-Libraries/oneDPL_histogram/src/: main.cpp
applications.industrial.machine-vision.computer-vision-optimization-toolkit-pv_rc1/Optimization-Methodologies/Optimized-Libraries/oneMklDFT/: README.md  oneMKL_DFT.sln
applications.industrial.machine-vision.computer-vision-optimization-toolkit-pv_rc1/Optimization-Methodologies/Optimized-Libraries/oneMklDFT/dft_c/: dft_c.cpp  dft_c.vcxproj.filters
applications.industrial.machine-vision.computer-vision-optimization-toolkit-pv_rc1/Optimization-Methodologies/Optimized-Libraries/oneMklDFT/dft_dpcpp/: dft_dpcpp.vcxproj.filters
applications.industrial.machine-vision.computer-vision-optimization-toolkit-pv_rc1/Optimization-Methodologies/Parallelism/Threading/: MinMax.sln  MinMax.vcxproj  readme.md
applications.industrial.machine-vision.computer-vision-optimization-toolkit-pv_rc1/Optimization-Methodologies/Using-Compiler-and-Analysis-Tools/PerformanceTestTool/: README.md
applications.industrial.machine-vision.computer-vision-optimization-toolkit-pv_rc1/Optimization-Methodologies/Using-Compiler-and-Analysis-Tools/VTuneProfiler/: README.md
applications.industrial.machine-vision.computer-vision-optimization-toolkit-pv_rc1/Reference-Optimized-Implementation/Optimized-Example-Use-Cases/PCBA_Preprocess/: README.md  ipp_box_blur_11x11.cpp  ipp_header.h  ipp_resize.cpp  ipp_threshold.cpp  pcb_opencv_ipp.cpp  util.cpp
applications.industrial.machine-vision.computer-vision-optimization-toolkit-pv_rc1/Reference-Optimized-Implementation/Optimized-OpenCV-Operators/CPU Implementation/: README.md
applications.industrial.machine-vision.computer-vision-optimization-toolkit-pv_rc1/Reference-Optimized-Implementation/Optimized-OpenCV-Operators/CPU Implementation/Flip/: CMakeLists.txt  Flip.vcxproj
applications.industrial.machine-vision.computer-vision-optimization-toolkit-pv_rc1/Reference-Optimized-Implementation/Optimized-OpenCV-Operators/CPU Implementation/Flip/src/: Flip.cpp
applications.industrial.machine-vision.computer-vision-optimization-toolkit-pv_rc1/Reference-Optimized-Implementation/Optimized-OpenCV-Operators/CPU Implementation/ImageDiff/: CMakeLists.txt  README.md
applications.industrial.machine-vision.computer-vision-optimization-toolkit-pv_rc1/Reference-Optimized-Implementation/Optimized-OpenCV-Operators/CPU Implementation/MeanBlur/: CMakeLists.txt  MeanBlur.sln  MeanBlur.vcxproj  MeanBlur.vcxproj.filters
applications.industrial.machine-vision.computer-vision-optimization-toolkit-pv_rc1/Reference-Optimized-Implementation/Optimized-OpenCV-Operators/CPU Implementation/MeanBlur/src/: mean-blur11-avx2.cpp  mean-blur11-sse.cpp  mean-blur11.cpp
applications.industrial.machine-vision.computer-vision-optimization-toolkit-pv_rc1/Reference-Optimized-Implementation/Optimized-OpenCV-Operators/GPU Implementation/: README.md
applications.industrial.machine-vision.computer-vision-optimization-toolkit-pv_rc1/Reference-Optimized-Implementation/Optimized-OpenCV-Operators/GPU Implementation/Practices/Canny/src/: CMakeLists.txt  canny.dp.cpp  canny.h
covi_feifei/: License.txt  README.md
covi_feifei/Optimization-Methodologies/Optimized-Libraries/: README.md
covi_feifei/Optimization-Methodologies/Optimized-Libraries/IppDFT/: README.md
covi_feifei/Optimization-Methodologies/Optimized-Libraries/IppGetStarted/: README.md
covi_feifei/Optimization-Methodologies/Optimized-Libraries/IppIntegration/: readme.md
covi_feifei/Optimization-Methodologies/Optimized-Libraries/IppMem/: memcpy.vcxproj
covi_feifei/Optimization-Methodologies/Optimized-Libraries/IppMultithreading/: CMakeLists.txt  IPP-multi-thread.sln  IPP-multi-thread.vcxproj  README.md
covi_feifei/Optimization-Methodologies/Optimized-Libraries/oneDPL_histogram/: CMakeLists.txt  README.md  histogram.sln  histogram.vcxproj
covi_feifei/Optimization-Methodologies/Vectorization/Intrinsics/: README.md
covi_feifei/Reference-Optimized-Implementation/Optimized-Example-Use-Cases/PCBA_Preprocess/: ipp_morph.cpp  pcb_opencv.sln  pcb_opencv.vcxproj  pcb_opencv.vcxproj.filters  util.h
covi_feifei/Reference-Optimized-Implementation/Optimized-OpenCV-Operators/CPU Implementation/MeanBlur/src/: CMakeLists.txt  mean-blur11-avx2-fp16-reg-tbb.cpp  mean-blur11-avx2-fp16.cpp
covi_feifei/Reference-Optimized-Implementation/Optimized-OpenCV-Operators/CPU Implementation/SobelGradient/src/: CMakeLists.txt
covi_feifei/Reference-Optimized-Implementation/Optimized-OpenCV-Operators/GPU Implementation/DirectProgramming/ESIMD/src/: CMakeLists.txt  histogram.cpp  matrix_transpose_glb.cpp
covi_feifei/Reference-Optimized-Implementation/Optimized-OpenCV-Operators/GPU Implementation/Practices/Erosion/src/: CMakeLists.txt  MainSourceFiles.yaml  erosion.h
covi_feifei/Reference-Optimized-Implementation/Optimized-OpenCV-Operators/GPU Implementation/Practices/WarpAffine/src/: CMakeLists.txt  cudaWarp-affine.dp.cpp  cudaWarp.h
(+133 files in other folders)
